--- a/assets/css/carouselAdvices-css.css
+++ b/assets/css/carouselAdvices-css.css
@@ -1,6 +1,15 @@
-
 #adviceCaroussel {
     margin-top: 5%;
+}
+
+#adviceCaroussel_Stagiaire .caroussel,
+#adviceCaroussel_Formateur .caroussel{
+    height: 360px;
+}
+
+#adviceCaroussel_Stagiaire .caroussel_item,
+#adviceCaroussel_Formateur .caroussel_item {
+    float: left;
 }
 
 .avis_Stagiaire,
@@ -9,7 +18,7 @@
     padding: 0 2%;
     width: 80%;
     margin-left: 10%;
-    height: auto;
+    height: 325px;
 }
 
 .avis_Stagiaire {
@@ -36,6 +45,7 @@
 
 .content {
     width: 90%;
+    height: 125px;
 }
 
 .content p {
@@ -75,5 +85,16 @@
     .avis_Stagiaire,
     .avis_Formateur {
         height: 90%;
+    }
+}
+
+@media (max-width: 767px){
+    .avis_Stagiaire,
+    .avis_Formateur {
+        height: 280px;
+    }
+
+    .author_icone {
+        margin-top: 5%;
     }
 }
