--- a/assets/css/lastest_post.css
+++ b/assets/css/lastest_post.css
@@ -1,25 +1,55 @@
-.latest-post {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 4px 4px 9px 1px rgba(0, 0, 0, 0.75);
-    transition: transform .4s;
+@media screen {
+    .latest-post {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 20px;
+        border-radius: 15px;
+        box-shadow: 4px 4px 9px 1px rgba(0, 0, 0, 0.75);
+        transition: transform .4s;
+    }
+
+    .latest-post:hover {
+        transform: scale(1.08);
+    }
+
+    .latest-post-content {
+        font-size: 115%;
+        padding: 0 2%;
+    }
+
+    .button-latest-post {
+        display: block;
+        margin: 0 auto;
+        width: 30%;
+        font-size: 110%;
+        transition: transform .4s;
+    }
+
+    .button-latest-post:hover {
+        transform: scale(1.08);
+        border: solid 2px #ff0080;
+        background-color: #fff4ea;
+        color: #ff0080;
+    }
 }
 
-.latest-post:hover {
-    transform: scale(1.08);
+@media (max-width: 767px) {
+    .button-latest-post {
+        width: 60%;
+    }
+
+    .latest-post-title {
+        text-align: center;
+    }
 }
 
-.latest-post-content {
-    font-size: 115%;
-    padding: 0 2%;
-}
+@media (min-width: 768px) and (max-width: 1100px) {
+    .button-latest-post {
+        width: 30%;
+    }
 
-.button-latest-post {
-    display: block;
-    margin: 0 auto;
-    width: 10%;
-    font-size: 110%;
+    .latest-post-title {
+        text-align: center;
+    }
 }
